--- a/app/src/main/res/layout/history_row.xml
+++ b/app/src/main/res/layout/history_row.xml
@@ -1,49 +1,48 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
 
 
-        <LinearLayout
-            android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/row_type"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="1">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="one"
-                android:paddingRight="20dip"
-                android:paddingLeft="5dip"
-                android:id="@+id/row_type" />
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:paddingRight="35dip"
-                android:text="two"
-                android:id="@+id/row_time" />
-            <TextView
-                android:layout_width="114dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:paddingRight="35dip"
-                android:text="three"
-                android:id="@+id/row_sent_to" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="four"
-                android:id="@+id/row_text" />
-        </LinearLayout>
+            android:paddingLeft="5dip"
+            android:paddingRight="20dip"
+            android:text="one"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
+        <TextView
+            android:id="@+id/row_time"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:paddingRight="35dip"
+            android:text="two"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
+        <TextView
+            android:id="@+id/row_sent_to"
+            android:layout_width="114dp"
+            android:layout_height="wrap_content"
+            android:paddingRight="35dip"
+            android:text="three"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
+        <TextView
+            android:id="@+id/row_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="four"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
 
 
 </LinearLayout>
