--- a/app/src/main/res/layout/add_users_fragment.xml
+++ b/app/src/main/res/layout/add_users_fragment.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
-            <TextView
-                android:layout_width="251dp"
-                android:layout_height="37dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="first"
-                android:id="@+id/user" />
+    <TextView
+        android:id="@+id/user"
+        android:layout_width="251dp"
+        android:layout_height="37dp"
+        android:text="first"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </LinearLayout>
