--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -2,40 +2,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
-            android:id="@+id/relativeLayout">
+            android:paddingTop="12dp">
 
             <!-- prev button -->
             <ImageView
                 android:id="@+id/previous"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:src="@drawable/arrow_left"/>
+                android:layout_centerVertical="true"
+                android:src="@drawable/arrow_left" />
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textAppearance="@android:style/TextAppearance.Medium"
                 android:layout_marginTop="5dip"
+                android:textAppearance="@android:style/TextAppearance.Medium"
                 android:textColor="#000000"
                 android:textSize="18dip"
                 android:textStyle="bold" />
@@ -45,95 +44,93 @@
                 android:id="@+id/next"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/arrow_right"/>
+                android:layout_centerVertical="true"
+                android:src="@drawable/arrow_right" />
         </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/calendar_header"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:background="@color/summer"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/relativeLayout"
-            android:layout_alignParentStart="true">
+            android:background="@color/summer"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:textColor="#222222"
-                android:text="SUN"/>
+                android:text="SUN"
+                android:textColor="#222222" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:textColor="#222222"
-                android:text="MON"/>
+                android:text="MON"
+                android:textColor="#222222" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:textColor="#222222"
-                android:text="TUE"/>
+                android:text="TUE"
+                android:textColor="#222222" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:textColor="#222222"
-                android:text="WED"/>
+                android:text="WED"
+                android:textColor="#222222" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:textColor="#222222"
-                android:text="THU"/>
+                android:text="THU"
+                android:textColor="#222222" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:textColor="#222222"
-                android:text="FRI"/>
+                android:text="FRI"
+                android:textColor="#222222" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:textColor="#222222"
-                android:text="SAT"/>
+                android:text="SAT"
+                android:textColor="#222222" />
         </LinearLayout>
 
 
-            <GridView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/gridview"
-                android:layout_width="fill_parent"
-                android:layout_height="334dp"
-                android:listSelector="@android:color/transparent"
-                android:numColumns="7"
-                android:stretchMode="columnWidth"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
+        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/gridview"
+            android:layout_width="fill_parent"
+            android:layout_height="334dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:listSelector="@android:color/transparent"
+            android:numColumns="7"
+            android:stretchMode="columnWidth" />
 
-            <ListView
-                android:layout_width="fill_parent"
-                android:id="@+id/event_listview"
-                android:layout_height="fill_parent"/>
-
+        <ListView
+            android:id="@+id/event_listview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
 
 
     </LinearLayout>
