--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -5,20 +5,17 @@
     android:background="@drawable/calendar_cell"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="2dip" >
+    android:padding="2dip">
 
-    <TextView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#9754"
         android:textSize="14dip"
-        android:textStyle="bold" >
-    </TextView>
+        android:textStyle="bold"></TextView>
 
-    <ImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/date_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
