--- a/app/src/main/res/layout/content_share.xml
+++ b/app/src/main/res/layout/content_share.xml
@@ -4,110 +4,115 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="1"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.oris1991.anotherme.ShareActivity"
-    tools:showIn="@layout/activity_share"
-    android:orientation="vertical"
-    android:weightSum="1">
+    tools:showIn="@layout/activity_share">
 
     <TextView
+        android:id="@+id/share"
         android:layout_width="122dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Share"
-        android:id="@+id/share" />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
-        android:weightSum="1"
-        android:layout_weight="0.23">
+        android:layout_weight="0.23"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
         <TextView
-            android:layout_width="122dp"
-            android:layout_height="59dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Enter message:"
             android:id="@+id/messageText"
-            android:layout_weight="0.77" />
-    <EditText
-        android:layout_width="128dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/message"
-        android:layout_weight="0.23" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:weightSum="1"
-        android:layout_weight="0.37">
-
-        <TextView
             android:layout_width="122dp"
             android:layout_height="59dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Share with:"
-            android:id="@+id/shareText"
-            android:layout_weight="1.04" />
-    <EditText
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/with" />
+            android:layout_weight="0.77"
+            android:text="Enter message:"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="128dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.23" />
 
     </LinearLayout>
+
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="53dp">
+        android:layout_height="50dp"
+        android:layout_weight="0.37"
+        android:orientation="horizontal"
+        android:weightSum="1">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="68dp"
-            android:text="Make Picture"
-            android:id="@+id/makePic"
-            android:layout_weight="1"
-            android:layout_gravity="bottom" />
+        <TextView
+            android:id="@+id/shareText"
+            android:layout_width="122dp"
+            android:layout_height="59dp"
+            android:layout_weight="1.04"
+            android:text="Share with:"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="68dp"
-            android:text="Add Picture"
-            android:id="@+id/getPic"
-            android:layout_weight="1"
-            android:layout_gravity="bottom" />
+        <EditText
+            android:id="@+id/with"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
 
     </LinearLayout>
+
     <LinearLayout
-        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="53dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/makePic"
+            android:layout_width="wrap_content"
+            android:layout_height="68dp"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:text="Make Picture" />
+
+        <Button
+            android:id="@+id/getPic"
+            android:layout_width="wrap_content"
+            android:layout_height="68dp"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:text="Add Picture" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="265dp"
-        android:layout_weight="0.02">
+        android:layout_weight="0.02"
+        android:orientation="horizontal">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="68dp"
-            android:text="Cancel"
             android:id="@+id/cancel"
-            android:layout_weight="1"
-            android:layout_gravity="bottom" />
-
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="68dp"
-            android:text="Save"
-            android:id="@+id/save"
+            android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:layout_gravity="bottom" />
+            android:text="Cancel" />
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="wrap_content"
+            android:layout_height="68dp"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:text="Save" />
 
 
     </LinearLayout>
