--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -1,11 +1,9 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:weightSum="1">
-
 
 
     <RelativeLayout
@@ -14,23 +12,23 @@
         android:layout_weight="1">
 
         <TextView
+            android:id="@+id/event_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="first"
-            android:id="@+id/event_text" />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
 
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/event_row_image"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:id="@+id/event_row_image"
 
 
         />
 
--->
+    -->
 
 </LinearLayout>
