--- a/app/src/main/res/layout/history_activity.xml
+++ b/app/src/main/res/layout/history_activity.xml
@@ -20,66 +20,65 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/summer"
         android:clipToPadding="false"
+        android:orientation="vertical"
         android:paddingTop="?android:attr/actionBarSize">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary">
-
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal">
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold"
-                android:textColor="#fff"
-                android:text="type"
-                android:paddingRight="20dip"
                 android:paddingLeft="5dip"
-                />
+                android:paddingRight="20dip"
+                android:text="type"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#fff"
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold"
-                android:textColor="#fff"
-                android:text="Time"
                 android:paddingRight="35dip"
-                />
+                android:text="Time"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#fff"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="114dp"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold"
-                android:textColor="#fff"
-                android:text="Sent to"
                 android:paddingRight="52dip"
-                />
+                android:text="Sent to"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#fff"
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold"
-                android:textColor="#fff"
                 android:text="Text"
-                />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#fff"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
 
         <ListView
-            android:layout_width="fill_parent"
             android:id="@+id/PS_listview"
-            android:layout_height="499dp"/>
+            android:layout_width="fill_parent"
+            android:layout_height="499dp" />
 
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
