--- a/app/src/main/res/layout/popup_row.xml
+++ b/app/src/main/res/layout/popup_row.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="60dp">
 
@@ -8,7 +7,7 @@
         android:id="@+id/popupName"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:textSize="18dp"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:textSize="18dp" />
 
 </LinearLayout>
