--- a/app/src/main/res/menu/menu_calendar_adapter.xml
+++ b/app/src/main/res/menu/menu_calendar_adapter.xml
@@ -24,21 +24,21 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/action_camera"
+        android:icon="@drawable/share"
         android:orderInCategory="100"
         android:title="@string/action_camera"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/share"/>
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_add"
+        android:icon="@drawable/add_button"
         android:orderInCategory="100"
         android:title="@string/action_add"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/add_button"/>
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/fragment_user"
+        android:icon="@drawable/notification_icon"
         android:orderInCategory="100"
         android:title="@string/fragment_user"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/notification_icon"/>
+        app:showAsAction="ifRoom" />
 
 </menu>
