--- a/app/src/main/res/menu/menu_defualt.xml
+++ b/app/src/main/res/menu/menu_defualt.xml
@@ -24,10 +24,10 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/action_camera"
+        android:icon="@drawable/share"
         android:orderInCategory="100"
         android:title="@string/action_camera"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/share"/>
+        app:showAsAction="ifRoom" />
 
 
 </menu>
