--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -24,16 +24,16 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/action_camera"
+        android:icon="@drawable/share"
         android:orderInCategory="100"
         android:title="@string/action_camera"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/share"/>
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_delete"
+        android:icon="@drawable/delete_icon"
         android:orderInCategory="100"
         android:title="@string/action_delete"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/delete_icon"/>
+        app:showAsAction="ifRoom" />
 
 
 </menu>
